@@ -130,6 +130,15 @@ Password) before copying to the clipboard.</td>
 
 <table>
 <tbody valign=top align=left>
+<td align=center width=100><a href="nojs.html" onclick="BR(3029576);return false;">3029576</a></td>
+<td>
+Ensure user specified backup directory ends with a slash.</td>
+</tr>
+<td align=center width=100><a href="nojs.html" onclick="BR(3028926);return false;">3028926</a></td>
+<td>
+Entries modified via Synchronize are now displayed correctly if the
+user checks the preference "Highlight changed entries" via Options->Display.</td>
+</tr>
 <tr>
 <td align=center width=100><a href="nojs.html" onclick="BR(3016803);return false;">3016803</a></td>
 <td>No longer crashes when trying to view a base entry with similarly
